# WavHide

./: .gitignore  CMakeLists.txt  README.md
WavHide/: BitManipulator.cpp  BitManipulator.h  CMakeLists.txt  WavHide.cpp  WavHide.h  wavhide.cpp
WavHide/AudioManipulation/: ContentEvaluation.cpp
WavHide/DataManipulation/: AllocateBytes.cpp  AllocateBytes.h  ByteConverter.cpp  ByteConverter.h  CountBytes.cpp  CountBytes.h  ExtractByteAsInt.cpp  ExtractByteAsInt.h  HeaderWavExtractor.cpp  HeaderWavExtractor.h  WavHeader.cpp  WriteBinary.cpp  WriteBinary.h  WriteBinaryToTextFile.cpp  WriteBinaryToTextFile.h
WavHide/FileManipulation/: ContentEvaluation.cpp  ContentEvaluation.h
